--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,17 +1,39 @@
-const mongoose = require('mongoose');
+pipeline {
+    agent any
 
-// MongoDB Atlas connection string (use env variable for security)
-const mongodb_url = process.env.MONGO_URI || 
-    "mongodb+srv://munene:Ofof%402025@projectcluster1.9ycirzi.mongodb.net/darkroom?retryWrites=true&w=majority";
-
-// Connect to MongoDB
-mongoose.connect(mongodb_url, { 
-    useNewUrlParser: true, 
-    useUnifiedTopology: true 
-}, (err) => {
-    if (err) {
-        console.error("❌ Mongo connection error:", err);
-    } else {
-        console.log("✅ Database connected successfully");
+    environment {
+        NODE_ENV = "production"
+        MONGO_URI = credentials('mongo-uri-secret')  // Add in Jenkins → Credentials → Secret Text
     }
-});
+
+    stages {
+        stage('Checkout') {
+            steps {
+                git branch: 'main', url: 'https://github.com/YOUR-USERNAME/YOUR-FORK.git'
+            }
+        }
+
+        stage('Install Dependencies') {
+            steps {
+                sh 'npm install'
+            }
+        }
+
+        stage('Test DB Connection') {
+            steps {
+                sh 'node -e "require(\'mongoose\').connect(process.env.MONGO_URI).then(()=>console.log(\'✅ Mongo OK\')).catch(err=>console.error(\'❌\',err))"'
+            }
+        }
+
+        stage('Deploy') {
+            steps {
+                sh '''
+                npm install -g pm2
+                pm2 stop darkroom || true
+                pm2 start server.js --name darkroom
+                pm2 save
+                '''
+            }
+        }
+    }
+}
