--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --exit"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -12,16 +12,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
-    "express": "^4.21.2",
+    "express": "^4.17.1",
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
     "uuid": "^8.1.0"
-  },
-  "devDependencies": {
-    "chai": "^3.2.0",
-    "chai-http": "^1.0.0",
-    "mocha": "^8.1.1"
   }
-  
 }
