--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,20 +1,35 @@
 pipeline {
     agent any
 
+    tools {
+        nodejs "NodeJS"
+    }
+
     stages {
-        stage('Build') {
+        stage('Checkout') {
             steps {
-                sh 'npm install'
+                git url: 'https://github.com/itzmunene/gallery.git', branch: 'master'
             }
         }
+
+        stage('Install Dependencies') {
+            steps {
+                sh '''
+                  rm -rf node_modules package-lock.json
+                  npm install --legacy-peer-deps
+                '''
+            }
+        }
+
         stage('Test') {
             steps {
                 sh 'npm test'
             }
         }
-        stage('Deploy') {
+
+        stage('Run App') {
             steps {
-                sh 'node server.js'
+                sh 'node server.js & sleep 5'
             }
         }
     }
@@ -22,12 +37,11 @@ pipeline {
     post {
         success {
             slackSend(channel: '#jenkins-builds',
-                      message: "✅ Build #${env.BUILD_NUMBER} succeeded! View: ${env.BUILD_URL}")
+                      message: "✅ SUCCESS: Build #${env.BUILD_NUMBER} for *${env.JOB_NAME}* succeeded.\n🔗 ${env.BUILD_URL}\n🌍 Render: https://gallery-j9wd.onrender.com/")
         }
         failure {
             slackSend(channel: '#jenkins-builds',
-                      message: "❌ Build #${env.BUILD_NUMBER} failed! View: ${env.BUILD_URL}")
+                      message: "❌ FAILURE: Build #${env.BUILD_NUMBER} for *${env.JOB_NAME}* failed.\n🔗 ${env.BUILD_URL}")
         }
     }
 }
-
