--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
         success {
             slackSend(
                 tokenCredentialId: 'slack-bot-token',
-                channel: '#YourName_IP1',
+                channel: '#gallery-task-tracker',
                 color: 'good',
                 message: "✅ Build *${env.JOB_NAME} #${env.BUILD_NUMBER}* succeeded.\nJenkins: ${env.BUILD_URL}\nRender: ${env.RENDER_URL}"
             )
@@ -51,7 +51,7 @@ pipeline {
         failure {
             slackSend(
                 tokenCredentialId: 'slack-bot-token',
-                channel: '#YourName_IP1',
+                channel: '#gallery-task-tracker',
                 color: 'danger',
                 message: "❌ Build *${env.JOB_NAME} #${env.BUILD_NUMBER}* failed.\nCheck Jenkins: ${env.BUILD_URL}"
             )
